# ourchants

./: .env  .env.example  .gitignore  DEVELOPMENT.md  README.md  app.py  cdk.json  pyproject.toml  requirements.txt  setup.py
cdk.out/: SongDatabaseStack.assets.json  SongDatabaseStack.template.json  manifest.json  tree.json
data/: sample_songs.json
docs/: ADR.md  ARCHITECTURE.md  SPECIFICATION.md
infrastructure/: __init__.py  app_stack.py  database.py  schema.sql
models/: song.py
ourchants.egg-info/: PKG-INFO  SOURCES.txt
scripts/: load_sample_data.py  setup_database.py  setup_env.py  verify_db_connection.py
src/api/: api.py
src/database/: operations.py
tests/: test_database.py  test_database_operations.py  test_database_queries.py  test_infrastructure.py  test_json_data.py  test_song.py
